<resources>
  <string name="app_name">Leb Oro</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>

  <!-- Toast messages -->
  <string name="toast_no_live_data_found">No live data available for this game yet</string>
  <string name="toast_game_not_started_yet">There is no data available for this game</string>
  <string name="toast_error_parsing">Couldn\'t process the article. Try again and email me if the problem persist.</string>

  <!--Nav header-->
  <string name="navigation_header_title">LEB Oro league</string>
  <string name="navigation_header_subtitle">For basketball fans</string>

  <!--Menu-->
  <string name="navigation_drawer_classification">Classification</string>
  <string name="navigation_drawer_standings">Standings</string>
  <string name="navigation_drawer_news">News</string>
  <string name="navigation_drawer_live_games">Live games</string>
  <string name="navigation_drawer_games">Games</string>
  <string name="navigation_drawer_teams_info">Rosters</string>
  <string name="navigation_live_video_game">Live game video</string>
  <string name="navigation_game_view_title" translatable="false">%2$s - %1$s</string>
  <string name="navigation_menu_social_group">Social</string>
  <string name="navigation_menu_social_item_share">Share</string>

  <!--Classification list-->
  <string name="classification_list_header_position">P</string>
  <string name="classification_list_header_team">TEAM</string>
  <string name="classification_list_header_games_won">W</string>
  <string name="classification_list_header_games_lost">L</string>
  <string name="classification_list_header_points">PTS</string>

  <!--Game attrs-->
  <string name="game_attr_status_finished">Finished</string>
  <string name="game_attr_quarter">Quarter</string>
  <string name="game_attr_quarter_res">Q</string>
  <string name="game_attr_overtime">Overtime</string>
  <string name="game_attr_overtime_res">OT</string>

  <!--Games list-->
  <string name="game_list_bar_title">Game day</string>

  <!--Live game overview-->
  <string name="live_game_overview_current_status" translatable="false">{quarter} {timeLeft}</string>
  <string name="live_game_overview_current_status_finished">Finished</string>

  <!--Sharing-->
  <string name="share_application_title">Share using…</string>
  <string name="share_application_message">Checkout this application to follow the LEB Oro! {url}</string>

  <!-- News -->
  <string name="news_article_toolbar_title">News</string>

  <!--News providers-->
  <string name="news_provider_feb" translatable="false">Feb</string>
  <string name="news_provider_cobrothers" translatable="false">COBrothers</string>
  <string name="news_provider_zona_de_basquet" translatable="false">ZonaDeBasquet</string>

  <!--Standings-->
  <string name="standing_points_bar_title">Points</string>
  <string name="standing_rebounds_bar_title">Rebounds</string>
  <string name="standing_defensive_rebounds_bar_title">Offensive rebounds</string>
  <string name="standing_offensive_rebounds_bar_title">Defensive rebounds</string>
  <string name="standing_assists_bar_title">Assists</string>
  <string name="standing_steals_bar_title">Steals</string>
  <string name="standing_turnovers_bar_title">Turnovers</string>
  <string name="standing_blocks_bar_title">Blocks</string>
  <string name="standing_game_value_bar_title">Game value</string>

  <!-- Live game view -->
  <string name="statistic_header_field_goal">FG</string>
  <string name="statistic_header_3_point">3P</string>
  <string name="statistic_header_free_throws">FT</string>
  <string name="statistic_header_offensive_rebound">OFF</string>
  <string name="statistic_header_defensive_rebound">DEF</string>
  <string name="statistic_header_assists">AST</string>
  <string name="statistic_header_points">PTS</string>
  <string name="statistic_header_steals">ST</string>
  <string name="statistic_header_turn_overs">TO</string>
  <string name="statistic_header_fouls">PF</string>
  <string name="statistic_header_blocks">BLK</string>
  <string name="statistic_header_value">%1$d/%2$d</string>

  <!--Team info-->
  <string name="team_roster_height">%d centimeters</string>
  <string name="team_roster_position_coach">Coach</string>

  <plurals name="statistic_highlight_points">
    <item quantity="one">%d point</item>
    <item quantity="other">%d points</item>
  </plurals>
  <plurals name="statistic_plural_assists">
    <item quantity="one">%d assist</item>
    <item quantity="other">%d assists</item>
  </plurals>
  <plurals name="statistic_plural_offensive_rebounds">
    <item quantity="one">%d offensive rebound</item>
    <item quantity="other">%d offensive rebounds</item>
  </plurals>
  <plurals name="statistic_plural_defensive_rebounds">
    <item quantity="one">%d defensive rebound</item>
    <item quantity="other">%d defensive rebounds</item>
  </plurals>
  <plurals name="statistic_plural_rebounds">
    <item quantity="one">%d rebound</item>
    <item quantity="other">%d rebounds</item>
  </plurals>
  <plurals name="statistic_plural_steals">
    <item quantity="one">%d steal</item>
    <item quantity="other">%d steals</item>
  </plurals>
  <plurals name="statistic_plural_blocks">
    <item quantity="one">%d block</item>
    <item quantity="other">%d blocks</item>
  </plurals>
  <plurals name="statistic_plural_turnovers">
    <item quantity="one">%d turnover</item>
    <item quantity="other">%d turnovers</item>
  </plurals>
  <plurals name="statistic_plural_fouls">
    <item quantity="one">%d foul</item>
    <item quantity="other">%d fouls</item>
  </plurals>

  <string name="statistic_points">Points</string>
  <string name="statistic_field_goals">FG</string>
  <string name="statistic_field_goals_percentage">FG%</string>
  <string name="statistic_three_points">3P</string>
  <string name="statistic_three_points_percentage">3P%</string>
  <string name="statistic_free_throws">FT</string>
  <string name="statistic_free_throws_percentage">FT%</string>
  <string name="statistic_defensive_rebounds">Defensive rebounds</string>
  <string name="statistic_offensive_rebounds">Offensive rebounds</string>
  <string name="statistic_total_rebounds">Total rebounds</string>
  <string name="statistic_assists">Assists</string>
  <string name="statistic_steals">Steals</string>
  <string name="statistic_blocks">Blocks</string>
  <string name="statistic_turnovers">Turnovers</string>
  <string name="statistic_fouls">Fouls</string>

  <string name="live_game_tab_play_by_play">Play by play</string>
  <string name="live_game_tab_player_stats">Players stats</string>
  <string name="live_game_tab_team_stats">Teams stats</string>
  <string name="live_game_no_data_message">No live data</string>

</resources>